fix info z-index

--- a/assets/scss/sections/handle.scss
+++ b/assets/scss/sections/handle.scss
@@ -587,6 +587,7 @@
         background: white;
         font-size: 14px;
         opacity: 0.7;
+        z-index: 3;
         font-weight: 500;
         transition: all 0.3s ease;
 
